# Pulse

./: .gitignore  README.md  docker-compose.yml
Agent/: README.md  go.mod  go.sum  main.go  payload.go
Control_Plane/: README.md
Control_Plane/src/ControlPlane.Api/: ControlPlane.Api.csproj  ControlPlane.Api.http  Program.cs
Control_Plane/src/ControlPlane.Api/Controllers/: AuthController.cs  HostsController.cs
Control_Plane/src/ControlPlane.Api/Database/: ControlPlaneDbContext.cs  ControlPlaneDbContextFactory.cs
Control_Plane/src/ControlPlane.Api/Database/Tables/: CPU.cs  CPUDetails.cs  Disk.cs  Host.cs  Memory.cs  Metrics.cs  Network.cs  NetworkDetails.cs  User.cs
Control_Plane/src/ControlPlane.Api/Migrations/: 20260620190840_InitialCreate.Designer.cs  20260620190840_InitialCreate.cs  20260621094951_AddNetworkName.Designer.cs  20260621094951_AddNetworkName.cs  20260621104914_WidenByteColumns.Designer.cs  20260621104914_WidenByteColumns.cs  20260623080706_AddMetricsTimestamp.Designer.cs  20260623080706_AddMetricsTimestamp.cs  20260625103727_AddUsersTable.Designer.cs  20260625103727_AddUsersTable.cs  ControlPlaneDbContextModelSnapshot.cs
Control_Plane/src/ControlPlane.Api/Services/: ConfigService.cs  TokenService.cs
Control_Plane/tests/ControlPlane.Tests/: ControlPlane.Tests.csproj  UnitTest1.cs
Dashboard/: package-lock.json  package.json
Dashboard/src/: App.tsx
Dashboard/src/api/: client.ts  types.ts
Ingest/: Cargo.toml  README.md
Ingest/src/: db.rs  main.rs  payload.rs  routes.rs
Intelligence/: README.md  pyproject.toml
(+7 files in other folders)
